/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.2.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    maven {
    	url 'https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-releases/'
    }
}


sourceSets {
	main {
		java {
			srcDirs = [ 'src/main/java' ]
		}
	}
	javadoc {
		java {
			srcDirs = [ 'src/main/java' ]
		}
	}
}


dependencies {
    // Use JUnit test framework.
    testImplementation 'junit:junit:4.13.2'

    // This dependency is used by the application.
    implementation 'com.google.guava:guava:31.1-jre'
    implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
    implementation group: 'commons-io', name: 'commons-io', version: '2.13.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.2.1'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.2'

	implementation group: 'uk.ac.shef.wit.simmetrics', name: 'simmetrics', version: '1.6.2.20070207'
    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.3'
    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.3'
	implementation group: 'org.apache.poi', name: 'poi-ooxml-schemas', version: '4.1.2'
	implementation group: 'org.apache.poi', name: 'poi-scratchpad', version: '5.2.3'
	implementation group: 'org.odftoolkit', name: 'odfdom-java', version: '0.11.0'
	implementation group: 'org.odftoolkit', name: 'simple-odf', version: '0.9.0'
    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.29'
    
    implementation 'org.apache.tika:tika-core:2.8.0'
    implementation group: 'org.apache.tika', name: 'tika-parsers', version: '2.8.0'
    implementation group: 'org.apache.tika', name: 'tika-parser-audiovideo-module', version: '2.8.0'
    
    implementation group: 'eu.medsea.mimeutil', name: 'mime-util', version: '2.1.3'
    implementation group: 'com.github.jtidy', name: 'jtidy', version: '1.0.4'
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.16.1'
    implementation group: 'org.mnode.ical4j', name: 'ical4j', version: '3.2.12'
    implementation group: 'org.apache.any23', name: 'apache-any23-core', version: '2.7'
    implementation group: 'org.openrdf', name: 'openrdf-model', version: '1.2.7'
    implementation group: 'org.apache.jena', name: 'jena', version: '4.9.0', ext: 'pom'
    implementation group: 'org.apache.jena', name: 'jena-arq', version: '4.9.0'

    implementation group: 'uk.ac.gate', name: 'gate-core', version: '9.0.1'
    implementation group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '4.5.4'
    implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
    implementation group: 'org.mnode.mstor', name: 'mstor', version: '1.0.3'
    implementation group: 'org.apache.velocity', name: 'velocity-engine-core', version: '2.3'

    implementation group: 'de.quippy', name: 'javamod', version: '2.2'
    implementation group: 'javazoom', name: 'jlayer', version: '1.0.1'
    implementation files('libs/local/JSwingC64-1.10.4.jar')
    implementation files('libs/local/zmpp-wandora.jar')
    implementation group: 'com.kenai.nbpwr', name: 'com-sun-pdfview', version: '1.0.5-201003191900'
    implementation 'org.openjfx:javafx-web:19:mac'
    implementation 'org.openjfx:javafx-base:19:mac'
    implementation 'org.openjfx:javafx-graphics:19:mac'
    implementation 'org.openjfx:javafx-media:19:mac'
    implementation 'org.openjfx:javafx-swing:19:mac'

    implementation files('libs/local/JRI.jar')
    implementation files('libs/local/JRIEngine.jar')
    implementation files('libs/local/REngine.jar')

    implementation group: 'org.dockingframes', name: 'docking-frames-common', version: '1.1.1'
    implementation group: 'de.sciss', name: 'syntaxpane', version: '1.3.0'
    
    implementation group: 'javax.servlet', name: 'servlet-api', version: '2.5'
    implementation group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '6.0.0'
    implementation group: 'com.sun.mail', name: 'jakarta.mail', version: '2.0.1'
    implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
    implementation 'xerces:xercesImpl:2.12.2'
    implementation group: 'org.apache-extras.beanshell', name: 'bsh', version: '2.0b6'
    implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.9.0'
    
    implementation group: 'net.ontopia.external.org.tmapi', name: 'tmapi', version: '2.0.2'
    implementation group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '6.6.0.202305301015-r'
	implementation group: 'org.eclipse.jdt', name: 'ecj', version: '3.34.0'
	implementation group: 'org.eclipse.jetty', name: 'jetty-http', version: '11.0.15'
	implementation group: 'org.eclipse.jetty', name: 'jetty-server', version: '11.0.15'
	
	implementation 'org.slf4j:slf4j-api:1.7.36'
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
}


configurations.all {
    exclude group: 'xml-apis'
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}


// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}


compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    // Define the main class for the application.
    mainClass = 'org.wandora.application.Wandora'
}
